2019-01-15  Marc A. Smith  <marc.smith@parodyne.com>

	include the kernel System.map files in ESOS distribution packages (useful for debugging kernel panics via crash)

2019-01-14  Marc A. Smith  <marc.smith@parodyne.com>

	fixed a bug in the ocf:esos:scst RA script

	updated SCST to version 3.3.x/r7899; updated initramfs script crash dump kernel handling to only rescan PCIe bus and process uevents if we couldn't find the FS label the first time (PCIe rescan causes strange behavior afterwards, so only do it if we need to)

2019-01-13  Marc A. Smith  <marc.smith@parodyne.com>

	build fixes for turbostat and cpupower in esos_kernels target; updated pciutils to build the shared library and install include files; rc.sysinit: set the MSR policy to maximum performance via x86_energy_perf_policy

2019-01-12  Marc A. Smith  <marc.smith@parodyne.com>

	updated SCST to version 3.3.x/r7871; build and install several power-related tools from the Linux kernel source

2019-01-10  Marc A. Smith  <marc.smith@parodyne.com>

	updated initramfs script to mount the file system with sync flag when saving vmcore via makedumpfile; enhanced config for -debug kernel

2019-01-07  Marc A. Smith  <marc.smith@parodyne.com>

	updated GCC to version 7.4.0 (supports retpoline to build newer kernels)

	updated Linux to version 4.14.91

	added a line in the initramfs script to increase verbosity during crash dump capture

2019-01-05  Marc A. Smith  <marc.smith@parodyne.com>

	enable Microsemi PQI Driver in the kernel config

	updated SCST to version 3.3.x/r7866 (stable)

2019-01-03  Marc A. Smith  <marc.smith@parodyne.com>

	added the mstflint package (tools for Mellanox adapters)

2019-01-01  Marc A. Smith  <marc.smith@parodyne.com>

	install.sh: exclude nullb* devices when running lsblk

2018-12-31  Marc A. Smith  <marc.smith@parodyne.com>
