@@ -1,7 +1,7 @@
 /**
  * @file info_labels.c
  * @brief Functions for the TUI main screen information labels.
- * @author Copyright (c) 2019 Marc A. Smith
+ * @author Copyright (c) 2019 Parodyne Inc.
  */
 
 #ifndef _GNU_SOURCE
