@@ -1,7 +1,7 @@
 /**
  * @file main.c
  * @brief Contains the main() implementation and supporting functions.
- * @author Copyright (c) 2019 Marc A. Smith
+ * @author Copyright (c) 2019 Parodyne Inc.
  */
 
 #ifndef _GNU_SOURCE
