@@ -1,7 +1,7 @@
 /**
  * @file strings.c
  * @brief Common string variables used throughout the entire program.
- * @author Copyright (c) 2019 Marc A. Smith
+ * @author Copyright (c) 2019 Parodyne Inc.
  */
 
 #include <stddef.h>
