@@ -1,7 +1,7 @@
 /**
  * @file utility.c
  * @brief Contains common utility functions used by other functions.
- * @author Copyright (c) 2019 Marc A. Smith
+ * @author Copyright (c) 2019 Parodyne Inc.
  */
 
 #ifndef _GNU_SOURCE
